History of Products.minaraad
============================

2.1.3 (unreleased)
-------------------



2.1.2 (8 July 2008)
-------------------

- Changed wording in some places.
  [maurits]


2.1.1 (4 July 2008)
-------------------

- Changed wording of email template to confirm membership.
  [maurits]

- Do not show author in recently_modified and only show the date
  there, not the time.
  [maurits]


2.1 (4 July 2008)
-----------------

- Show the subscriptions for each member on the duplicates page.
  Needs prettifying.
  [maurits]

- Added method getSubscriptionsForMemberId to the SubscriptionManager.
  [maurits]

- Display the duplicate members next to each other.
  [maurits]

- When a user logs in and there is more than one user with the same
  email address, we redirect to a form where he can compare those
  users and select one for deletion.
  [maurits]

- Added CMFPlone/skins/plone_login/login_next.cpy* for customizing.
  [maurits]

- Gave Managers the possibility to list all email addresses that are
  registered for more than one member; see @@minaraad_service.
  [maurits]

- Made form for the apparently already existing @@minaraad_service
  view so members without an email address can be deleted.
  [maurits]

- Renamed @@test_mail to @@send_membership_reminder as that actually
  gives a clue about what that view does.
  [maurits]

- Changed the membership reminder email to fit the new wishes.
  [maurits]

- Allowed use of @@test_mail?memberid=maurits to test the sending of
  the membership reminder.
  [maurits]


2.0.9 (released 29 May 2008)
----------------------------

- Set copyright year to 2008 in colophon.  [maurits]


2.0.8 (released 13 March 2008)
------------------------------

- Get rid of the far too spurious deprecation warnings for
  toLocalizedTime.  [maurits]

- Change word use in email template study.  And just use Dutch.
  [maurits]

- Sort the news items in the email newsletter, just like in the