@@ -28,10 +28,19 @@ else:
     member = mt.getAuthenticatedMember()
     authenticated_id = member.getId()
     if not authenticated_id:
+        # Note: this is also true for old members that have forgotten
+        # their password.
         status = "newuser"
         # log in as that user (will update cookies)
         acl_users = getToolByName(context, 'acl_users')
         acl_users.updateCredentials(request, request.RESPONSE, userid, password)
+
+    duplicate_view = context.restrictedTraverse('@@email_duplicates')
+    if duplicate_view.duplicates:
+        # Note: this overwrite the 'newuser' status if that has been
+        # set above, which is fine.
+        status = 'duplicates'
+        return state.set(status=status)
 
 return state.set(status=status)
 
